--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ social_username: jekyllrb
 # Set theme color here
 # Choose from: black (default), blue, gray, magenta, orange, red, white, and yellow.
 theme: jekyll-swiss
-theme_color: black
+theme_color: white
 
 # Build settings
 markdown: kramdown
